feature/validationsForMainPage
run and compiler commands are merged with parameter section.